# nagient

./: .dockerignore  .editorconfig  .env.example  .env.example.ru  .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PUSH_WHEN_READY.txt  README.md  README.ru.md  README_v0.8.4.md  SECURITY.md  docker-compose.control-panel.yml  docker-compose.yml  install.ps1  install.sh  pyproject.toml
.claude/: FINAL_REPORT.md  FINAL_STATUS.md  FINAL_SUMMARY.md  PROJECT_ANALYSIS.md  PUSH_INSTRUCTIONS.md  QUICK_REFERENCE.md  README.md  READY_TO_PUSH.md  REFACTORING_LOG.md  RELEASE_v0.8.4.md  SESSION_SUMMARY.md  WORK_COMPLETE.md
.github/workflows/: auto-tag.yml  ci.yml  release.yml  (+1 more)
0.10.1/: docker-compose.yml  install.ps1  install.sh  uninstall.ps1  update.ps1  update.sh
0.4.9/: docker-compose.yml  update.ps1
0.6.3/: docker-compose.yml  install.ps1  install.sh  update.sh
0.7.5/: docker-compose.yml  install.ps1  install.sh  uninstall.sh  update.ps1  update.sh
ai/: README.md  README.ru.md  agent-runtime-implementation-prompt.md  agent-runtime-implementation-prompt.ru.md  agent-runtime-next.ru.md
channels/: stable.json
config/: github-actions.secrets.example.env  github-actions.variables.example.env  nagient.example.toml  project.toml  runtime.env.example  secrets.example.env  secrets.example.env.ru  tool-secrets.example.env
developer/: README.md  README.ru.md
docs/: PLUGIN_DEVELOPMENT.md  PLUGIN_DEVELOPMENT.ru.md  README.md  README.ru.md  architecture.md  architecture.ru.md  commands.md  commands.ru.md  configuration.md  configuration.ru.md  deploy.md  deploy.ru.md  env.md  env.ru.md  install.md  install.ru.md  plugin-contracts.md  plugin-contracts.ru.md  plugins.md  plugins.ru.md  troubleshooting.md  troubleshooting.ru.md
manifests/: 0.10.1.json  0.4.9.json  0.6.3.json  0.7.5.json
scripts/: install-local.ps1  install-local.sh  install.ps1  install.sh  push-release.sh  update.ps1  update.sh  verify-release.sh
tests/: __init__.py  bootstrap.py
(+166 files in other folders)
